# little-walk-request

./: Cargo.toml
curl/: accept_request.curl  assign_accepter.curl  create_walk_request.curl  create_walk_request.json  dismiss_accepter.curl  nearby_walk_requests.curl
src/: handlers.rs  main.rs
src/core/: entities.rs  repository.rs  service.rs
src/repositories/: mod.rs  mongodb.rs
