[package]
name = "little-walk-request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3.29"
mongodb = { version = "2.7.1", features = ["bson-chrono-0_4"] }
serde = { version = "1.0.193", features = ["derive"] }
nb-field-names = "*"
actix-web = "4.4.0"
nb-from-env = "0.2.1"
dotenv = "0.15.0"
env_logger = "0.10.1"
http = "1.0.0"
lazy_static = "1.4.0"
